--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden; /*Removes horizontal scroll bar created on complete site*/
+}
+
 .navbar .nav-link {
     font-size: 14px;
     text-transform: uppercase;
@@ -34,6 +38,7 @@
     background: url('../img/lights.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
+    background-size: cover;
     text-align: center;
     color: #fff;
 }
@@ -53,6 +58,7 @@
     background: url('../img/media.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
+    background-size: cover;
     background-position: 0 -300;
     text-align: center;
     color: #fff;
