--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,19 @@ body {
     margin-top: -50px;
 }
 
+/* FAQ */
+
+#faq .card {
+    border: #444;   
+}
+
+#faq a {
+    color: #fff;
+    text-decoration: none;
+}
+
+#faq .card-body,
+#faq .card-header {
+    background: #333;
+}
+
